2004-03-06  Dominique Devriese  <devriese@kde.org>

	* Incorporate a patch by Pino Toscano adding some unfinished work
	on a Dr.Geo import filter.  It's not finished yet, and also not
	visible in the UI yet.

	* Fix the ObjectHierarchy::resultDoesNotDependOnGiven() function
	to do something much less stupid than before.  It still only
	checks if one of the result objects does not depend on the given
	objects, it needs to be changed to properly check whether all the
	result objects depend on the given objects.

	* Fix the ObjectHierarchy class to generate a correct hierarchy 
	when a result object depends on another object that does not 
	depend on the given objects.

2004-02-24  Dominique Devriese  <devriese@kde.org>

	* Make the tests stuff generate a proper text label with 
	property calcers instead of a normal calcer as rest arguments.

	* Make the configure.in.in stuff properly detect python on RH
	-> many thanks to Maurizio for helping me with this.

	* Fix some problems with the useText, that were introduced with 
	the new tests stuff.

2004-02-23  Dominique Devriese  <devriese@kde.org>

	* Add a ContainsTestType, testing whether a given point is on a
	given curve.

2004-02-17  Dominique Devriese  <devriese@kde.org>

	* Add the possibility to give an item a custom color in the 
	  popup dialog.

2004-02-16  Dominique Devriese  <devriese@kde.org>

	* make the usetext in TestConstructMode also appear for all other
	arguments than the last one

2004-02-15  Dominique Devriese  <devriese@kde.org>

	* Add code by Maurizio Paolini, and some adaptations of his code
	by me for supporting property tests like "are these two lines
	parallel ?"
	
	* update the aboutdata: Maurizio Paolini did not only help with
	math intensive code, and Franco Pasquarelli did some very
	important work in the locus code.

2004-02-14  Dominique Devriese  <devriese@kde.org>

	* Fix a bug waiting to pop up in construct_mode.cc, where you
	select the same object twice.
