@@ -1,3 +1,9 @@
+2004-03-09  Dominique Devriese  <devriese@kde.org>
+
+	* Fix the macro system to properly check whether the final objects
+	depend on the given objects, and fix a problem with the wrong
+	object being selected as the final object in some rare cases.
+
 2004-03-06  Dominique Devriese  <devriese@kde.org>
 
 	* Incorporate a patch by Pino Toscano adding some unfinished work
